# freeswitch

./: .clang-format  .drone.yml  .gitattributes  .gitconfig  .gitignore  .indent.pro  .lgtm.yml  .llm-repo-instructions  .mailmap  .version.in  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  Dockerfile_old  Dockerfile_wip  FILAMENT_DASHBOARD.md  Freeswitch.2005.unsupported.sln  Freeswitch.2008.express.sln  Freeswitch.2008.express.unsupported.sln  Freeswitch.2008.sln  Freeswitch.2008.sln.build.bat  Freeswitch.2008.sln.debug.bat  Freeswitch.2008.unsupported.sln  Freeswitch.2010.express.sln  Freeswitch.2010.sln  Freeswitch.2012.sln  Freeswitch.2012.sln.bat  Freeswitch.2013.sln  Freeswitch.2015.sln  Freeswitch.2015.sln.bat  Freeswitch.2017.sln  Freeswitch.2017.sln.bat  Freeswitch.2022.sln  Freeswitch.sln  IMPLEMENTATION_SUMMARY.md  INSTALL  Jenkinsfile  LICENSE  Makefile.am  (+55 more)
libs/apr-iconv/: AUTHORS  CHANGES  COPYING  Makefile.in  apriconv.dsp  buildconf  configure  configure.in  libapriconv.dsp  libapriconv.rc
libs/apr-util/: .update  CHANGES  CMakeLists.txt  INSTALL.MySQL  apr-util.spec  aprutil.dsp  aprutil.dsw  build-outputs.mk  build.conf  buildconf  configure  configure.ac  configure.gnu  configure.in  libaprutil.dsp  libaprutil.rc
libs/broadvoice/: .update  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  broadvoice.pc.in  broadvoice.spec  broadvoice.spec.in  config-h.in  configure.ac  wrapper.xsl
libs/curl/: .update  Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  buildconf  buildconf.bat  configure  configure.ac  configure.gnu  curl-config.in
libs/esl/: .gitignore  ESL.i  Makefile  Makefile.am  esl.2008.vcproj  eslmake.rules.in  fs_cli.2008.vcproj  fs_cli.2010.vcxproj  fs_cli.2010.vcxproj.filters  fs_cli.2012.vcxproj  fs_cli.2012.vcxproj.filters  fs_cli.2013.vcxproj  fs_cli.2015.vcxproj  fs_cli.2017.vcxproj  fs_cli.c  fs_cli.conf  ivrd.c  switch_version.rc2  test.pl  testclient.c  testserver.c  testserver_fork.c
libs/freetdm/: .gitignore  .update  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  bootstrap  configure.ac  configure.gnu  cyginstall.sh  freetdm.2008.sln  freetdm.2010.sln  freetdm.2012.sln  freetdm.doxygen  freetdm.pc.in  general.makefile  mkrelease.sh  openzap.2008.sln  openzap.sln  openzap.vcproj  ozrename.sh  ozreplace.sh  wanpipe  zap_skel.h  zap_zt.c  zap_zt.h  zt
libs/iax/: .cvsignore  .update  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  bootstrap.sh  build.sh  config.status  configure  configure.gnu  configure.in  iax-config  iax-config.in  iax.spec  iax.spec.in  libiax2.2008.vcproj  libiax2.vcproj  libtool  ltmain.sh
libs/iksemel/: .update  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  acsite.m4  configure  configure.ac  configure.gnu  iksemel.pc.in  ltmain.sh  openssl.m4
libs/ilbc/: .update  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  config-h.in  configure  configure.ac  configure.gnu  ilbc.spec  ilbc.spec.in  libilbc.2008.vcproj  libilbc.2010.vcxproj  libilbc.2012.vcxproj  libilbc.2013.vcxproj  libilbc.2013.vcxproj.filters  libilbc.2015.vcxproj  libilbc.vcproj
libs/jitterbuffer/: Makefile.am  Makefile.in  configure  configure.in  jitterbuffer.vcproj
libs/jrtp4c/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
libs/jrtplib/: .in  ChangeLog  LICENSE.MIT  Makefile.am  Makefile.in  README.TXT  aclocal.m4  configure  configure.in  jrtplib.def  jrtplib.dsp  jrtplib.sln  jrtplib.vcproj  jrtplib_wce.vcproj  libtool  pkg.m4
libs/js/: .update  AUTHORS  ChangeLog  LINKS  Makefile.in  README  THANKS  TODO  VERSION  acsite.m4  config.h.in  config.hw  configure  configure.ac  configure.gnu  js-config.1  js-config.sh.in  js.1  js.3  js.pc.in  jslint.js  ltmain.sh  shtool
libs/ldns/: Changelog  Makefile.in  README  acx_nlnetlabs.m4  acx_python.m4  configure  configure.ac  configure.gnu  dname.c  dnssec.c  dnssec_sign.c  dnssec_verify.c  dnssec_zone.c  error.c  higher.c  host2str.c  host2wire.c  keys.c  ldns_symbols.def  libdns.doxygen  libdns.vim  net.c  packet.c  parse.c  rbtree.c  resolver.c  rr.c  rr_functions.c  sha1.c  sha2.c  str2host.c  tsig.c  update.c  util.c  util.h  wire2host.c  zone.c
libs/libblade/: .gitignore  Makefile.am  README  acinclude.m4  configure.ac  libblade.pc.in  libblade.props  libblade.sln  libblade.vcxproj  libblade.vcxproj.filters
libs/libcodec2/: .gitignore  COPYING  Makefile.am  Makefile.in  README  README_fdmdv.txt  configure.ac  configure.in
libs/libdingaling/: .update  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac  configure.gnu  configure.in  doc  libdingaling.2008.vcproj  libdingaling.2010.vcxproj  libdingaling.2010.vcxproj.filters  libdingaling.2012.vcxproj  libdingaling.2013.vcxproj  libdingaling.2015.vcxproj  libdingaling.2017.vcxproj  libdingaling.vcproj  ltmain.sh
libs/libedit/: CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.gnu  libedit.pc.in  ltmain.sh
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  cJSON.c  cJSON_Utils.c  d3des.c  fs_encode.c  fs_tts.c  g711.c  inet_pton.c  softtimer.c  switch.c  switch_apr.c  switch_apr_queue.c  switch_buffer.c  switch_caller.c  switch_channel.c  switch_config.c  switch_console.c  switch_core.c  switch_core_asr.c  switch_core_cert.c  switch_core_codec.c  switch_core_db.c  switch_core_directory.c  switch_core_event_hook.c  switch_core_file.c  switch_core_hash.c  switch_core_io.c  switch_core_media.c  switch_core_media_bug.c  switch_core_memory.c  switch_core_port_allocator.c  switch_core_rwlock.c  switch_core_session.c  switch_core_speech.c  switch_core_sqldb.c  switch_core_state_machine.c  switch_core_timer.c  (+77 more)
src/dotnet/: Common.cs  FreeSwitch.NET.csproj  Ivr.cs  Log.cs  Makefile  Module.cs  public.snk
src/include/: SimpleGlob.h  cc.h  config.h.in  d3des.h  g711.h  switch.h  switch_am_config.h.in  switch_apr.h  switch_bitpack.h  switch_buffer.h  switch_cJSON.h  switch_cJSON_Utils.h  (+66 more)
(+15261 files in other folders)
